#pragma once

namespace MellowPlayer::Infrastructure
{
    enum class Filter
    {
        All,
        Linux,
        OSX,
        Windows
    };
}
